// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADD_NOTE is correct 1`] = `
Object {
  "activeNoteContent": "",
  "activeNoteIndex": 0,
  "noteStatus": "NO_OPERATION",
  "notes": Array [
    Object {
      "id": "id-string",
      "rev": "",
      "title": "",
    },
  ],
}
`;

exports[`DELETE_NOTE_FROM_LIST is correct 1`] = `
Object {
  "activeNoteContent": "",
  "activeNoteIndex": -1,
  "noteStatus": "NO_OPERATION",
  "notes": Array [],
}
`;

exports[`INITIAL_STATE is correct 1`] = `
Object {
  "activeNoteContent": "",
  "activeNoteIndex": -1,
  "noteStatus": "NO_OPERATION",
  "notes": Array [],
}
`;

exports[`SET_ACTIVE_NOTE_INDEX is correct 1`] = `
Object {
  "activeNoteContent": "",
  "activeNoteIndex": 3,
  "noteStatus": "NO_OPERATION",
  "notes": Array [],
}
`;

exports[`SET_NOTE_STATUS is correct 1`] = `
Object {
  "activeNoteContent": "",
  "activeNoteIndex": -1,
  "noteStatus": "SAVING_NOTE",
  "notes": Array [],
}
`;

exports[`UPDATE_ACTIVE_NOTE_STATE is correct 1`] = `
Object {
  "activeNoteContent": "",
  "activeNoteIndex": -1,
  "noteStatus": "NO_OPERATION",
  "notes": Array [],
}
`;

exports[`UPDATE_NOTE_LIST is correct 1`] = `
Object {
  "activeNoteContent": "",
  "activeNoteIndex": -1,
  "noteStatus": "NO_OPERATION",
  "notes": Array [
    Object {
      "id": "123",
      "rev": "123a",
      "title": "welcome to Deer",
    },
  ],
}
`;

exports[`UPDATE_NOTE_REV is correct 1`] = `
Object {
  "activeNoteContent": "",
  "activeNoteIndex": -1,
  "noteStatus": "NO_OPERATION",
  "notes": Array [],
}
`;

exports[`UPDATE_NOTE_TITLE is correct 1`] = `
Object {
  "activeNoteContent": "",
  "activeNoteIndex": -1,
  "noteStatus": "NO_OPERATION",
  "notes": Array [],
}
`;
